--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 	<head>
-		<title>Example App</title>
+		<title>Fearless SDK Test</title>
 		<link rel="stylesheet" href="css/desktop.css" />
 		<script src="http://live.betaclik.com/js/clik-desktop.min.js" type="text/javascript"></script>
 		<script src="manifest.js" type="text/javascript"></script>
