Add a disconnect button

--- a/mobile/index.html
+++ b/mobile/index.html
@@ -46,6 +46,7 @@
 		</script>
 	</head>
 	<body>
+		<img src="img/disconnect.png" alt="disconnect" id="disconnect" class="hasDownState"></img>
 		<div id="stage">
 			<div>
 				<div class="label">
