copy some header stuff

--- a/mobile/index.html
+++ b/mobile/index.html
@@ -46,8 +46,12 @@
 		</script>
 	</head>
 	<body>
-		<img src="img/disconnect.png" alt="disconnect" id="disconnect" class="hasDownState"></img>
 		<div id="stage">
+			<header>
+				<div id="disconnect-button" class="header-button hasDownState"></div>
+				<h1 id="section-title">Home Page</h1>
+				<div class="header-button"></div>
+			</header>		
 			<div>
 				<div class="label">
 					Conference
