send blank message to get participant id on android

--- a/mobile/index.html
+++ b/mobile/index.html
@@ -25,6 +25,7 @@
 				}
 
 				// Say hello
+				clik.sendMessage("");
 				clik.sendMessage("Hello " + newParticipant + ", I'm " + clik.getParticipantId());
 			}
 
